--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="index.html" method="post">
+    <form action="/" method="post"> 
         <input type="text" name="num1" placeholder="First Number "> 
         <input type="text" name="num2" placeholder="Second Number ">
-        <input type="text">
         <button type="submit">Calculate</button> 
-
-
 
     </form>
 
